RESOLVED FIXED16791
Confusing console error message clear behavior
https://bugs.webkit.org/show_bug.cgi?id=16791
Summary Confusing console error message clear behavior
Matt Lilek
Reported 2008-01-08 19:54:25 PST
The inspector's handling of error messages can be rather confusing. For example: 1) Load the snippet in the URL field above and open the inspector. 2) Note that there is a red, (1) bubble next to the document and "1 error" under Console in the sidebar. 3) Select the console "tab" and hit the clear button. 4) The red, (1) bubble will disappear and the contents of the console is erased. "1 error" remains under the Console tab. 5) Close the inspector and reopen it. 6) The red, (1) bubble and error message in the console is back.
Attachments
Adam Roben (:aroben)
Comment 1 2008-01-29 11:12:53 PST
Kevin McCullough
Comment 2 2008-08-07 15:30:39 PDT
Committed revision 35628.
Note You need to log in before you can comment on or make changes to this bug.