WebCore/page/InspectorController.cpp
@@ -1007,6 +1007,16 @@ static JSValueRef profiles(JSContextRef ctx, JSObjectRef /*function*/, JSObjectR
     return result;
 }
 
+static JSValueRef clearMessages(JSContextRef ctx, JSObjectRef /*function*/, JSObjectRef thisObject, size_t /*argumentCount*/, const JSValueRef[] /*arguments*/, JSValueRef* /*exception*/)
+{
+    InspectorController* controller = reinterpret_cast<InspectorController*>(JSObjectGetPrivate(thisObject));
+    if (controller)
+        controller->clearConsoleMessages();
+
+    return JSValueMakeUndefined(ctx);
+}
+
+
 // InspectorController Class
 
 InspectorController::InspectorController(Page* page, InspectorClient* client)
@@ -1204,6 +1214,12 @@ void InspectorController::addConsoleMessage(ConsoleMessage* consoleMessage)
         addScriptConsoleMessage(consoleMessage);
 }
 
+void InspectorController::clearConsoleMessages()
+{
+    deleteAllValues(m_consoleMessages);
+    m_consoleMessages.clear();
+}
+
 void InspectorController::startGroup()
 {    
     JSValueRef exception = 0;
@@ -1311,6 +1327,7 @@ void InspectorController::windowScriptObjectAvailable()
         { "addBreakpoint", WebCore::addBreakpoint, kJSPropertyAttributeNone },
         { "removeBreakpoint", WebCore::removeBreakpoint, kJSPropertyAttributeNone },
         { "isWindowVisible", WebCore::isWindowVisible, kJSPropertyAttributeNone },
+        { "clearMessages", clearMessages, kJSPropertyAttributeNone },
         { 0, 0, 0 }
     };
 
